# Kiran

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  compile_commands.json
shaders/: display.glsl  rt.glsl  rt_legacy.glsl  vert.glsl
src/: BVH.h  ShaderStorage.h  camera.h  framebuffer.h  imageLoader.cpp  imageLoader.h  modelLoader.cpp  modelLoader.h  primitives.h  renderer.cpp  renderer.h  rtgl.cpp  shader.cpp  shader.h  sphere.h  testScene.h  texture.cpp  texture.h
